--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   SQLX_OFFLINE: true
+  TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
 
 jobs:
   build:
@@ -31,10 +32,25 @@ jobs:
           profile: minimal
           toolchain: stable
 
+      - name: Set up PostgreSQL
+        uses: docker/setup-postgres@v1
+        with:
+          postgres-version: latest
+          port: 6500:5432
+
+      - name: Install SQLx CLI
+        run: cargo install sqlx-cli
+
+      - name: Run SQLx Database Migrations
+        run: sqlx database setup --url $TEST_DATABASE_URL
+
       - name: Build and test code
         run: |
           cargo build --verbose
           cargo test --verbose
+
+      - name: Clean up PostgreSQL container
+        run: docker stop postgres
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
