--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -13,6 +13,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 6500:5432
+        env:
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: password123
+          POSTGRES_DB: rust_app_test
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,12 +41,6 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-
-      - name: Set up PostgreSQL
-        uses: docker/setup-postgres@v1
-        with:
-          postgres-version: latest
-          port: 6500:5432
 
       - name: Install SQLx CLI
         run: cargo install sqlx-cli
