--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,7 +7,18 @@ on:
 
 env:
   SQLX_OFFLINE: true
-  TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+  TEST_DATABASE_URL: ${{secrets.TEST_DATABASE_URL}}
+  POSTGRES_HOST: ${{secrets.POSTGRES_HOST}}
+  POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+  POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+  POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+  POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
+  PGADMIN_DEFAULT_EMAIL: ${{secrets.PGADMIN_DEFAULT_EMAIL}}
+  PGADMIN_DEFAULT_PASSWORD: ${{secrets.PGADMIN_DEFAULT_PASSWORD}}
+  PGADMIN_LISTEN_PORT: ${{secrets.PGADMIN_LISTEN_PORT}}
+  DATABASE_URL: ${{secrets.DATABASE_URL}}
+  JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
+  JWT_MAXAGE: ${{secrets.JWT_MAXAGE}}
 
 jobs:
   build:
@@ -15,13 +26,18 @@ jobs:
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:15.3-alpine
         ports:
           - 6500:5432
         env:
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: password123
-          POSTGRES_DB: rust_app_test
+          POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+          POSTGRES_DB: ${{secrets.POSTGRES_DB}}_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -43,10 +59,10 @@ jobs:
           toolchain: stable
 
       - name: Install SQLx CLI
-        run: cargo install sqlx-cli
+        run: cargo install sqlx-cli --no-default-features --features native-tls,postgres
 
       - name: Run SQLx Database Migrations
-        run: sqlx database setup --url $TEST_DATABASE_URL
+        run: sqlx database setup --database-url $TEST_DATABASE_URL
 
       - name: Build and test code
         run: |
@@ -62,8 +78,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build and push Docker images
         uses: docker/bake-action@v2.3.0
