removed the test db uri

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           POSTGRES_USER: ${{secrets.POSTGRES_USER}}
           POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-          POSTGRES_DB: ${{secrets.POSTGRES_DB}}_test
+          POSTGRES_DB: ${{secrets.POSTGRES_DB}}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -62,7 +62,7 @@ jobs:
         run: cargo install sqlx-cli --no-default-features --features native-tls,postgres
 
       - name: Run SQLx Database Migrations
-        run: sqlx database setup --database-url $TEST_DATABASE_URL
+        run: sqlx database setup
 
       - name: Build and test code
         run: |
