--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ sqlx = { version = "0.7.1", features = [
 ] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 validator = { version = "0.16.1", features = ["derive"] }
+openssl = "*"
