--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@ jsonwebtoken = "8.3.0"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
 sqlx = { version = "0.7.1", features = [
-    "runtime-async-std-native-tls",
+    "tls-native-tls",
+    "runtime-async-std",
     "postgres",
     "chrono",
     "uuid",
 ] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 validator = { version = "0.16.1", features = ["derive"] }
-openssl = "0.10.56"
-openssl-probe = "0.1.5"
+openssl = "*"
