--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ colored = "2.0.4"
 dotenv = "0.15.0"
 env_logger = "0.10.0"
 jsonwebtoken = "8.3.0"
+openssl-probe = "0.1.5"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
 sqlx = { version = "0.7.1", features = [
@@ -26,4 +27,3 @@ sqlx = { version = "0.7.1", features = [
 ] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 validator = { version = "0.16.1", features = ["derive"] }
-openssl = "*"
