added postgres test db again

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,6 +23,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15.3-alpine
+        ports:
+          - 6500:5432
+        env:
+          POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+          POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,6 +56,12 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
+
+      - name: Install SQLx CLI
+        run: cargo install sqlx-cli --no-default-features --features native-tls,postgres
+
+      - name: Run SQLx Database Migrations
+        run: sqlx database setup
 
       - name: Build and test code
         run: |
