--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ async-trait = "0.1.72"
 chrono = { version = "0.4.26", features = ["serde"] }
 colored = "2.0.4"
 dotenv = "0.15.0"
-# env_logger = "0.10.0"
+env_logger = "0.10.0"
 jsonwebtoken = "8.3.0"
 openssl-probe = "0.1.5"
 serde = { version = "1.0.183", features = ["derive"] }
