--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/bake-action@v2.3.0
         with:
+          build-args: RUST_VERSION=1.71.1
           push: true
           set: |
             *.cache-from=type=gha
