--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ validator = { version = "0.16.1", features = ["derive"] }
 
 [[bin]]
 name = "complete-restful-api-in-rust"
-path = "/usr/src/app/complete-restful-api-in-rust/src/main.rs"
+path = "/usr/src/app/src/main.rs"
