--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "8000:8000"
     depends_on:
       - postgres
-    command: ["./wait-for-db.sh", "api-start"]
+    # command: ["./wait-for-db.sh", "api-start"]
   postgres:
     image: postgres:15.3-alpine
     container_name: postgres
