--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
-  api:
+  api-rust:
     image: edemziddah/api-rust
-    container_name: api-rust
     environment:
       DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
@@ -15,6 +14,7 @@ services:
     depends_on:
       - postgres
     command: ["./wait-for-db.sh", "api-start"]
+    
   postgres:
     image: postgres:15.3-alpine
     container_name: postgres
@@ -33,6 +33,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
@@ -45,6 +46,7 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: always
+
 volumes:
   postgres:
   pgadmin-data:
