still not working

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # -----------------------------------------------------------------------------
 # PostgreSQL Credentials for Docker Compose
 # -----------------------------------------------------------------------------
-POSTGRES_HOST=127.0.0.1
-POSTGRES_USER=admin
+POSTGRES_HOST=postgres
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password123
 POSTGRES_DB=rust_app
 POSTGRES_PORT=6500
@@ -18,7 +18,7 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Docker)
 # -----------------------------------------------------------------------------
-DATABASE_URL=postgresql://admin:password123@localhost:6500/rust_app?schema=public
+DATABASE_URL=postgresql://postgres:password123@postgres:6500/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Supabase)
