removed the script to run migrations

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+RUN_MIGRATIONS=true
+
 # -----------------------------------------------------------------------------
 # PostgreSQL Credentials for Docker Compose
 # -----------------------------------------------------------------------------
