--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Docker)
 # -----------------------------------------------------------------------------
-DATABASE_URL=postgresql://postgres:password123@localhost:6500/rust_app?schema=public
+DATABASE_URL=postgresql://postgres:password123@postgres:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Supabase)
