giving a try again

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,6 +7,19 @@ on:
 
 env:
   SQLX_OFFLINE: true
+  POSTGRES_HOST: ${{secrets.POSTGRES_HOST}}
+  POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+  POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+  POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+  POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
+  PGADMIN_DEFAULT_EMAIL: ${{secrets.PGADMIN_DEFAULT_EMAIL}}
+  PGADMIN_DEFAULT_PASSWORD: ${{secrets.PGADMIN_DEFAULT_PASSWORD}}
+  PGADMIN_LISTEN_PORT: ${{secrets.PGADMIN_LISTEN_PORT}}
+  DATABASE_URL: ${{secrets.DATABASE_URL}}
+  JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
+  JWT_MAXAGE: ${{secrets.JWT_MAXAGE}}
+  VPS_PASSWORD: ${{secrets.VPS_PASSWORD}}
+  VPS_IP: ${{secrets.VPS_IP}}
 
 jobs:
   build:
