--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   api-rust:
     image: edemziddah/api-rust
     container_name: api-rust
+    restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
@@ -9,16 +10,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       - postgres
       
   postgres:
     image: postgres:15.3-alpine
     container_name: postgres
-    ports:
-      - 6500:5432
+    # ports:
+    #   - 6500:5432
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -35,8 +36,8 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
-    ports:
-      - "5050:80"
+    # ports:
+    #   - "5050:80"
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -44,7 +45,22 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: always
+  
+  caddy:
+    image: caddy/caddy:2.7.2-alpine
+    container_name: caddy
+    restart: unless-stopped
+    ports:
+      - 443:443
+      - 80:80
+    volumes:
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/site:/services
+      - caddy_data:/data
+      - caddy_config:/config
 
 volumes:
   postgres:
   pgadmin-data:
+  caddy_data:
+  caddy_config:
