--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,8 +54,7 @@ services:
       - 443:443
       - 80:80
     volumes:
-      - $PWD/Caddyfile:/etc/caddy/Caddyfile
-      - $PWD/site:/services
+      - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
 
