--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   api-rust:
     image: edemziddah/api-rust
@@ -10,16 +12,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # ports:
-    #   - "8000:8000"
     depends_on:
       - postgres
+    ports:
+      - "8000:8000"
       
   postgres:
     image: postgres:15.3-alpine
     container_name: postgres
-    # ports:
-    #   - 6500:5432
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -32,12 +32,9 @@ services:
       timeout: 5s
       retries: 5
 
-
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
-    # ports:
-    #   - "5050:80"
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -45,6 +42,8 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: always
+    depends_on:
+      - postgres
   
   caddy:
     image: caddy/caddy:2.7.2-alpine
