--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,8 @@ services:
       - 443:443
       - 80:80
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/site:/services
       - caddy_data:/data
       - caddy_config:/config
 
