--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -92,7 +92,7 @@ jobs:
         run: sudo apt-get install sshpass
 
       - name: Copy Caddyfile to vps_server
-        run: sshpass -v -p ${{ secrets.VPS_PASSWORD }} scp -o StrictHostKeyChecking=no Caddyfile root@${{ secrets.VPS_IP }}:~/Caddyfile
+        run: sshpass -v -p ${{ secrets.VPS_PASSWORD }} scp -o StrictHostKeyChecking=no Caddyfile root@${{ secrets.VPS_IP }}:~
 
       - name: Copy docker-compose.yml to vps_server
         run: sshpass -v -p ${{ secrets.VPS_PASSWORD }} scp -o StrictHostKeyChecking=no docker-compose.yml root@${{ secrets.VPS_IP }}:~
