did another modification

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,10 +1,10 @@
 rust.codevoweb.com {
-    rewrite /api* /{uri}
-    rewrite /db* /{uri}
-    rewrite /pgadmin* /{uri}
+    rewrite /api* {uri}
+    rewrite /db* {uri}
+    rewrite /pgadmin* {uri}
     
     reverse_proxy /api* api-rust:8000
-    reverse_proxy /db* postgres:6500
+    reverse_proxy /db* postgres:5432
     reverse_proxy /pgadmin* pgadmin:80
 
     header {
