--- a/Caddyfile
+++ b/Caddyfile
@@ -1,13 +1,6 @@
 rust.codevoweb.com {
-    rewrite /api* {uri}    
-    reverse_proxy /api* api-rust:8000
-
-    header {
-        Strict-Transport-Security max-age=31536000;
-        X-Content-Type-Options nosniff
-        X-Frame-Options DENY
-        X-XSS-Protection "1; mode=block"
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'"
+    reverse_proxy api-rust:8000 {
+        header_down Strict-Transport-Security max-age=31536000;
     }
 }
 
