--- a/Caddyfile
+++ b/Caddyfile
@@ -5,13 +5,7 @@ rust.codevoweb.com {
 }
 
 pgadmin4.codevoweb.com {
-    reverse_proxy pgadmin:80
-
-    header {
-        Strict-Transport-Security max-age=31536000;
-        X-Content-Type-Options nosniff
-        X-Frame-Options DENY
-        X-XSS-Protection "1; mode=block"
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'"
+    reverse_proxy pgadmin:80 {
+        header_down Strict-Transport-Security max-age=31536000;
     }
 }
