--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-RUN_MIGRATIONS=true
-
 # -----------------------------------------------------------------------------
 # PostgreSQL Credentials for Docker Compose
 # -----------------------------------------------------------------------------
@@ -19,14 +17,22 @@ PGADMIN_LISTEN_PORT=80
 # Database (PostgreSQL - Docker)
 # -----------------------------------------------------------------------------
 DATABASE_URL=postgresql://postgres:password123@postgres:5432/rust_app?schema=public
-
-# -----------------------------------------------------------------------------
-# Database (PostgreSQL - Supabase)
-# -----------------------------------------------------------------------------
-# DATABASE_URL=paste_your_supabase_postgres_uri_here
+DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
 # JSON Web Token Credentials
 # -----------------------------------------------------------------------------
 JWT_SECRET_KEY=my_ultra_secure_jwt_secret_key
 JWT_MAXAGE=60
+
+# -----------------------------------------------------------------------------
+# DockerHub Credentails
+# -----------------------------------------------------------------------------
+DOCKER_USERNAME=
+DOCKER_PASSWORD=
+
+# -----------------------------------------------------------------------------
+# VPS IP and Password
+# -----------------------------------------------------------------------------
+VPS_IP=
+VPS_PASSWORD=
