--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 
 [dependencies]
 actix-cors = "0.6.4"
+actix-http = "3.3.1"
 actix-web = "4.3.1"
 argon2 = "0.5.1"
 async-trait = "0.1.72"
 chrono = { version = "0.4.26", features = ["serde"] }
 dotenv = "0.15.0"
 env_logger = "0.10.0"
+futures-util = "0.3.28"
 jsonwebtoken = "8.3.0"
 openssl-probe = "0.1.5"
 serde = { version = "1.0.183", features = ["derive"] }
@@ -24,5 +26,7 @@ sqlx = { version = "0.7.1", features = [
     "chrono",
     "uuid",
 ] }
+utoipa = { version = "3.4.4", features = ["actix_extras", "chrono"] }
+utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 validator = { version = "0.16.1", features = ["derive"] }
