added args to prod.yml

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -74,6 +74,7 @@ jobs:
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
+          args: --file docker-compose.prod.yml
   deploy:
     needs: build
     runs-on: ubuntu-latest
