changed from args to file

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -71,10 +71,10 @@ jobs:
         uses: docker/bake-action@v2.3.0
         with:
           push: true
+          file: docker-compose.prod.yml
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-          args: --file docker-compose.prod.yml
   deploy:
     needs: build
     runs-on: ubuntu-latest
