changed from file to files in the prod.yml

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -71,7 +71,8 @@ jobs:
         uses: docker/bake-action@v2.3.0
         with:
           push: true
-          file: docker-compose.prod.yml
+          files:
+            - docker-compose.prod.yml
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
