modified the files to their original form

--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL - Docker)
 # -----------------------------------------------------------------------------
-# DATABASE_URL=postgresql://postgres:password123@localhost:6500/rust_app?schema=public
-DATABASE_URL=postgresql://postgres:password123@postgres:5432/rust_app?schema=public
+DATABASE_URL=postgresql://postgres:password123@localhost:6500/rust_app?schema=public
+# DATABASE_URL=postgresql://postgres:password123@postgres:5432/rust_app?schema=public
 # DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
