--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -100,6 +100,9 @@ jobs:
       - name: Copy docker-compose.yml to vps_server
         run: sshpass -v -p '${{ secrets.VPS_PASSWORD }}' scp -o StrictHostKeyChecking=no docker-compose.yml root@${{ secrets.VPS_IP }}:~
 
+      - name: Copy docker-compose.prod.yml to vps_server
+        run: sshpass -v -p '${{ secrets.VPS_PASSWORD }}' scp -o StrictHostKeyChecking=no docker-compose.prod.yml root@${{ secrets.VPS_IP }}:~
+
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -119,4 +122,4 @@ jobs:
             export PGADMIN_LISTEN_PORT=${{secrets.PGADMIN_LISTEN_PORT}}
             docker-compose down
             docker-compose pull
-            docker-compose up -d
+            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
