--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,53 +2,14 @@ version: '3'
 
 services:
   api-rust:
-    image: edemziddah/api-rust
-    container_name: api-rust
-    restart: unless-stopped
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: ${DATABASE_URL}
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
-      JWT_MAXAGE: ${JWT_MAXAGE}
-    build:
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - postgres
-      
+      DATABASE_URL: ${DATABASE_CONTAINER_URL}
   postgres:
-    image: postgres:15.3-alpine
-    container_name: postgres
     ports:
     - 6500:5432
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready", "-h", "postgres", "-U", "${POSTGRES_USER}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
     ports:
       - 5050:80
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-      PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    restart: always
-    depends_on:
-      - postgres
-  
-volumes:
-  postgres:
-  pgadmin-data:
