added a new docker-compose file

--- a/.env
+++ b/.env
@@ -27,13 +27,13 @@ JWT_SECRET_KEY=my_ultra_secure_jwt_secret_key
 JWT_MAXAGE=60
 
 # -----------------------------------------------------------------------------
-# DockerHub Credentails
+# DockerHub Credentails | Only for Deployment
 # -----------------------------------------------------------------------------
 DOCKER_USERNAME=
 DOCKER_PASSWORD=
 
 # -----------------------------------------------------------------------------
-# VPS IP and Password
+# VPS IP and Password | Only for Deployment
 # -----------------------------------------------------------------------------
 VPS_IP=
 VPS_PASSWORD=
