--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-cors = "0.6.4"
-actix-http = "3.3.1"
 actix-web = "4.3.1"
 argon2 = "0.5.1"
 async-trait = "0.1.72"
@@ -19,13 +18,7 @@ jsonwebtoken = "8.3.0"
 openssl-probe = "0.1.5"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
-sqlx = { version = "0.7.1", features = [
-    "tls-native-tls",
-    "runtime-async-std",
-    "postgres",
-    "chrono",
-    "uuid",
-] }
+sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
 utoipa = { version = "3.4.4", features = ["actix_extras", "chrono"] }
 utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
 utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
