--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,6 @@ futures-util = "0.3.28"
 jsonwebtoken = "8.3.0"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
-sqlx = { version = "0.7.1", features = [
-    "tls-native-tls",
-    "runtime-async-std",
-    "postgres",
-    "chrono",
-    "uuid",
-] }
+sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 validator = { version = "0.16.1", features = ["derive"] }
