--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PGADMIN_LISTEN_PORT=80
 # -----------------------------------------------------------------------------
 DATABASE_URL=postgresql://postgres:password123@localhost:6500/rust_app?schema=public
 DATABASE_CONTAINER_URL=postgresql://postgres:password123@postgres:5432/rust_app?schema=public
-# DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
+DATABASE_TEST_URI=postgresql://postgres:password123@localhost:5432/rust_app?schema=public
 
 # -----------------------------------------------------------------------------
 # JSON Web Token Credentials
